fix: messages properties

--- a/springsecurity-joan/src/main/resources/messages.properties
+++ b/springsecurity-joan/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
-NotBlank.product.name=is required
-NotBlank.product.description=is required
-NotNull.product.price= cannot be null
+NotBlank.product.name=is required.
+NotBlank.product.description=is required.
+NotNull.product.price= cannot be null.
