feat: custom error messages added

--- a/springsecurity-joan/src/main/resources/messages.properties
+++ b/springsecurity-joan/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank.product.name=is required.
 NotBlank.product.description=is required.
 NotNull.product.price= cannot be null.
+Min.product.price= must be greater than or equal to 500.
